# CPU-Mining-Optimizing

./: README.md  android-release.apk  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android-build.yml  clean_workflows.yml  cmake-build.yml  desktop_run.yml  format-cpp.yml  formatting-cpp.yml  formatting-java.yml  full_test.yml  trash.txt
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  android_connection_set.cpp  main.cpp
android/src/main/cpp/connection/: androidminingconnection.cpp  androidminingconnection.h
android/src/main/java/com/ariasaproject/cpumininglearn/: ConsoleMessage.java  MainActivity.java
android/src/main/java/com/ariasaproject/cpuminingopt/: Base64.java  Console.java  Constants.java  CpuMiningWorker.java  Hasher.java  HexArray.java  IMiningWorker.java  IWorkerEvent.java  MainActivity.java  MinerService.java  MiningWork.java  SingleMiningChief.java  StratumMiningWork.java
android/src/main/java/com/ariasaproject/cpuminingopt/connection/: IConnectionEvent.java  IMiningConnection.java  StratumMiningConnection.java  TestStratumMiningConnection.java
android/src/main/java/com/ariasaproject/cpuminingopt/customview/: CustomEditTextView.java
android/src/main/java/com/ariasaproject/cpuminingopt/hasher/: Hasher.java
android/src/main/java/com/ariasaproject/cpuminingopt/stratum/: StratumJson.java  StratumJsonMethod.java  StratumJsonMethodGetVersion.java  StratumJsonMethodMiningNotify.java  StratumJsonMethodReconnect.java  StratumJsonMethodSetDifficulty.java  StratumJsonMethodShowMessage.java  StratumJsonResult.java  StratumJsonResultStandard.java  StratumJsonResultSubscribe.java  StratumSocket.java  StratumWorkBuilder.java
android/src/main/java/com/ariasaproject/cpuminingopt/worker/: CpuMiningWorker.java  IMiningWorker.java  IWorkerEvent.java
android/src/main/java/com/example/android/stratumminer/: Base64.java  Console.java  Constants.java  EntryPoint.java  HexArray.java  MainActivity.java  Miner.java  MinerService.java  MiningWork.java  MinyaException.java  MinyaLog.java  SingleMiningChief.java  StratumMiningWork.java
android/src/main/java/com/example/android/stratumminer/connection/: IConnectionEvent.java  IMiningConnection.java  StratumMiningConnection.java  TestStratumMiningConnection.java
android/src/main/res/drawable/: switch_thumb.xml  switch_track.xml
android/src/main/res/layout/: activity_layout_onstart.xml  activity_layout_onstop.xml  activity_layout_start.xml  activity_layout_stop.xml  activity_main.xml
android/src/main/res/transition/: mining_transition.xml
android/src/main/res/values/: strings.xml  styles.xml
core/: CMakeLists.txt  build.gradle  console.cpp  console.h  console_log.cpp  console_log.h  core.cpp  core.h  hasher.cpp  hasher.h  hashing.cpp  pass_function_set.h
core/connection/: miningsocket.h
core/hash-library/: crc32.cpp  hmac.h  keccak.cpp  md5.cpp  sha1.cpp  sha256.h  sha3.cpp
core/json/: json.cpp  json.h  jsonparser.h
core/src/main/java/com/ariasaproject/cpumininglearn/: ConsoleMessage.java  Miner.java  Work.java  Worker.java
core/utils/: hex.cpp  hex.h
desktop/: CMakeLists.txt  build.gradle  desktop_main.cpp
desktop/src/main/java/com/ariasaproject/cpumininglearn/: App.java  Hasher.java  Main.java  MessageUtils.java  Miner.java  Work.java  Worker.java
desktop/src/main/java/com/ariasaproject/cpumininglearn/app/: App.java  MessageUtils.java
desktop/src/main/java/com/ariasaproject/cpumininglearn/list/: LinkedList.java
desktop/src/main/java/com/ariasaproject/cpumininglearn/utilities/: JoinUtils.java  SplitUtils.java  StringUtils.java
desktop/src/test/java/com/ariasaproject/cpumininglearn/: MessageUtilsTest.java
desktop/src/test/java/com/ariasaproject/cpumininglearn/app/: MessageUtilsTest.java
junk/: hashing.cpp
junk/cryptopp/: CMakeLists.txt
(+19 files in other folders)
